--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <h2 id="word">加载中...</h2>
         <p id="meaning"></p>
         <p id="partOfSpeech">词性：未知</p>
+        <p id="example-sentence">这里会显示例句。</p>
       </div>
       <div id="encouragement" class="hidden"></div>
       <div id="controls">
@@ -66,6 +67,8 @@
       <span class="button-text">复习</span>
     </div>
   </footer>
+
+  <div id="generated-form"></div>
 
   <script src="script.js"></script>
 </body>
