--- a/index.html
+++ b/index.html
@@ -110,6 +110,8 @@
 
   <div id="generated-form"></div>
 
+  <button id="clearButton">清除已保存的单词</button>
+
   <script src="script.js"></script>
 </body>
 </html>
