--- a/index.html
+++ b/index.html
@@ -56,55 +56,15 @@
     </main>
   </div>
 
-  <!-- 词库页面 -->
-  <div id="page3" class="page hidden" style="background-image: url('path/to/your/background.jpg');">
-    <header>
-      <h1 class="header-title">词库</h1>
-    </header>
-    <main>
-      <div id="vocabList">
-        <div class="expandable">
-          <div class="expandable-header" onclick="toggleExpand('a1')">
-            <span id="arrow-a1" class="arrow">▶️</span> A1词汇
-          </div>
-          <div id="a1" class="expandable-content hidden">
-            <div class="sub-item" onclick="loadVocab('vocab.json')">U1词汇</div>
-            <div class="sub-item" onclick="loadVocab('vocab2.json')">U2词汇</div>
-          </div>
-        </div>
-      </div>
-    </main>
-  </div>
-
-  <!-- 答疑页面 -->
-  <div id="page4" class="page hidden" style="background-image: url('path/to/your/background.jpg');">
-    <h2 class="header-title" style="margin-top: 60px;">答疑</h2>
-    <div id="chatHistory" class="chat-history"></div>
-    <div class="input-container">
-        <input type="text" id="userInput" placeholder="输入你的问题..." />
-        <button id="sendButton">发送</button>
-    </div>
-  </div>
-
   <!-- 页面切换按钮，使用自定义图片 -->
   <footer>
     <div class="button-container">
-      <div class="button-wrapper" onclick="switchPage('page1')">
-        <img src="Button.jpg" alt="生词" id="wordButton">
-        <span>生词</span>
-      </div>
-      <div class="button-wrapper" onclick="switchPage('page2')">
-        <img src="Button.jpg" alt="复习" id="reviewButton">
-        <span>复习</span>
-      </div>
-      <div class="button-wrapper" onclick="switchPage('page3')">
-        <img src="Button.jpg" alt="词库" id="vocabButton">
-        <span>词库</span>
-      </div>
-      <div class="button-wrapper" onclick="switchPage('page4')">
-        <img src="Button.jpg" alt="答疑" id="qaButton">
-        <span>答疑</span>
-      </div>
+      <img id="btn-page1" src="Button.jpg" alt="显示当前页面" onclick="switchPage('page1')" />
+      <span class="button-text">生词</span>
+    </div>
+    <div class="button-container">
+      <img id="btn-page2" src="Button.jpg" alt="显示新页面" onclick="switchPage('page2')" />
+      <span class="button-text">复习</span>
     </div>
   </footer>
 
