--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
   </div>
 
   <!-- 词库页面 -->
-  <div id="page3" class="page hidden" style="background-image: url('path/to/your/background.jpg');">
+  <div id="page3" class="page hidden" style="background-image: url('img2.jpg');">
     <header>
       <h1 class="header-title">词库</h1>
     </header>
@@ -77,7 +77,7 @@
   </div>
 
   <!-- 答疑页面 -->
-  <div id="page4" class="page hidden" style="background-image: url('path/to/your/background.jpg');">
+  <div id="page4" class="page hidden" style="background-image: url('img2.jpg');">
     <h2 class="header-title" style="margin-top: 60px;">答疑</h2>
     <div id="chatHistory" class="chat-history"></div>
     <div class="input-container">
